tests/EtaX/EtaX.meth2/EtaX.meth2.02.check
// 2.13-base exitCode: 0   val t4c: () => Any = meth2 _   // ok
// 2.13-head exitCode: 0   val t4c: () => Any = meth2 _   // ok
// 2.13-new exitCode: 0   val t4c: () => Any = meth2 _   // ok
// 3.0-old exitCode: 0   val t4c: () => Any = meth2 _   // ok
// 3.0 exitCode: 0   val t4c: () => Any = meth2 _   // ok
// 3.1 exitCode: 1   val t4c: () => Any = meth2 _   // ok
-- Error: /d/shisa/target/tests/EtaX/EtaX.meth2/EtaX.meth2/EtaX.meth2.02.scala:8:23 
8 |  val t4c: () => Any = meth2 _   // ok
  |                       ^^^^^
  |                       The syntax `<function> _` is no longer supported;
  |                       you can use `(() => <function>())` instead
1 error found
